moving layout styling from grid to layout. Fix spacing above message box

--- a/templates/cassiopeia/scss/blocks/_css-grid.scss
+++ b/templates/cassiopeia/scss/blocks/_css-grid.scss
@@ -23,17 +23,6 @@
       max-width: none;
     }
 
-    .container-component,
-    .container-sidebar-left,
-    .container-sidebar-right {
-      display: flex;
-      flex-direction: column;
-
-      > * + * {
-        margin-top: $cassiopeia-grid-gutter;
-      }
-    }
-
     &:not(.has-sidebar-left) .container-component {
       grid-column-start: main-start;
     }
@@ -89,26 +78,16 @@
   grid-area: top-b;
 }
 
-.container-main {
-  grid-area: main;
-}
-
 .container-component {
   grid-area: comp;
 }
 
 .container-sidebar-left {
   grid-area: side-l;
-  .sidebar-left:first-child {
-    margin-top: $cassiopeia-grid-gutter;
-  }
 }
 
 .container-sidebar-right {
   grid-area: side-r;
-  .sidebar-right:first-child {
-    margin-top: $cassiopeia-grid-gutter;
-  }
 }
 
 .container-main-top {
